# peren-hackathon

./: .gitignore  alex.py  main.py  prepare.sh  preprocess.sh  pyproject.toml  questions.csv  readme.md  run.sh
