[tool.poetry]
name = "peren-hackathon"
version = "0.1.0"
description = ""
authors = ["ddorn <diego.dorn@free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
arrow = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
